<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Shows Profile Pic and Name at the top -->
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="275dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/top_background">
            <!-- Shows Profile Pic at the top -->
            <ImageView
                android:id="@+id/ProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:background="@drawable/empty_pic"
                android:contentDescription="@string/profile_pic" />
            <!-- Shows Name at the top -->
            <TextView
                android:id="@+id/Loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ProfilePic"
                android:padding="15dp"
                android:textAlignment="center"
                android:text="@string/full_name_txt"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <!-- Area to edit profile -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:background="@color/white">

            <!-- Edit Name -->
            <ImageView
                android:id="@+id/pic"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_pic"
                android:contentDescription="@string/full_name_txt"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignStart="@+id/pic"
                android:layout_marginStart="50dp"
                android:text="@string/first_name_txt"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignStart="@+id/pic"
                android:layout_marginStart="50dp"
                android:layout_below="@+id/first_name"
                android:layout_marginTop="15dp"
                android:text="@string/last_name_txt"
                android:textSize="18sp"/>
            <View
                android:id="@+id/divider_name"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/last_name"
                android:background="@color/charcoal"/>

            <!-- Edit Account Type -->
            <ImageView
                android:id="@+id/acc_type"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/divider_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_acc"
                android:contentDescription="@string/acc_txt"/>

            <Spinner
                android:id="@+id/acc_txt"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height= "50dp"
                android:layout_alignStart="@+id/acc_type"
                android:layout_marginStart="50dp"
                android:layout_below="@id/divider_name"
                android:layout_marginTop="20dp"
                android:entries="@array/accountTypes"
                android:textSize="18sp"/>

            <View
                android:id="@+id/divider_acc"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/acc_txt"
                android:background="@color/charcoal"/>

            <!-- Edit Birthday -->
            <ImageView
                android:id="@+id/birthday"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/divider_acc"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_birthday"
                android:contentDescription="@string/bday_txt"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/bday_txt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignStart="@+id/birthday"
                android:layout_marginStart="50dp"
                android:layout_below="@id/divider_acc"
                android:layout_marginTop="20dp"
                android:inputType="date"
                android:text="@string/bday_txt"
                android:textSize="18sp"/>
            <View
                android:id="@+id/divider_bday"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/bday_txt"
                android:background="@color/charcoal"/>

            <!-- Edit Email -->
            <ImageView
                android:id="@+id/email"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/divider_bday"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_email"
                android:contentDescription="@string/email_txt"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignStart="@+id/email"
                android:layout_marginStart="50dp"
                android:layout_below="@id/divider_bday"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:text="@string/email_txt"
                android:textSize="18sp"/>
            <View
                android:id="@+id/divider_email"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/email_txt"
                android:background="@color/charcoal"/>

            <!-- Edit Phone -->
            <ImageView
                android:id="@+id/phone"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/divider_email"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_phone"
                android:contentDescription="@string/phone_txt"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/phone"
                android:layout_marginStart="50dp"
                android:layout_below="@id/divider_email"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:text="@string/phone_txt"
                android:textSize="18sp"/>
            <View
                android:id="@+id/divider_phone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/phone_txt"
                android:background="@color/charcoal"/>

            <!-- Edit Gender -->
            <ImageView
                android:id="@+id/gender"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/divider_phone"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_gender"
                android:contentDescription="@string/gender_txt"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/gender"
                android:layout_marginStart="50dp"
                android:layout_below="@id/divider_phone"
                android:layout_marginTop="20dp"
                android:text="@string/gender_txt"
                android:textSize="18sp"
                android:entries="@array/genderTypes"/>
            <View
                android:id="@+id/divider_gender"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/gender_spinner"
                android:background="@color/charcoal"/>

            <!-- Edit Biography -->
            <ImageView
                android:id="@+id/bio"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/divider_gender"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_biography"
                android:contentDescription="@string/bio_txt"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/bio_txt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignStart="@+id/bio"
                android:layout_marginStart="50dp"
                android:layout_below="@id/divider_gender"
                android:layout_marginTop="20dp"
                android:text="@string/bio_txt"
                android:textSize="18sp"/>
            <View
                android:id="@+id/divider_bio"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/bio_txt"
                android:background="@color/charcoal"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/divider_bio"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/save_button"
                app:backgroundTint="@null"
                android:background="@drawable/round_button"
                android:padding="6dp"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>